# agentic-trading-bot-project

./: .env.example  .pre-commit-config.yaml  Dockerfile  FINAL_REPORT.md  INDEX.md  Makefile  README.md  REFACTORING_README.md  app.py  dailynotes.ipynb  docker-compose.yml  main.py  new_notes.ipynb  notes.ipynb  project_overview.md  pyproject.toml  requirements.txt  setup.py  streamlit_ui.py  test_deps.py
agentic-trading-bot_V0/: main.py
agentic-trading-bot_V0/agent/: workflow.py
agentic-trading-bot_V0/data_models/: models.py
agentic-trading-bot_V0/toolkit/: tools.py
config/: config.yaml
docs/: ARCHITECTURE.md  DESIGN_PATTERNS.md  DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  ISSUES_FIXED.md  PRODUCTION_REFACTORING.md  REFACTORING_SUMMARY.md  SCALABILITY_CICD.md
notebooks/: dailynotes.ipynb  notes.ipynb  queries.ipynb  test_suite.ipynb  testsuite.ipynb
notebooks/test_data/: sample_document.txt
src/: __init__.py  app.py  main.py  main_1.py
src/agents/: __init__.py  workflow.py
src/api/: chat_router.py  main.py
src/application/: __init__.py  document_ingestion_usecase.py  query_usecase.py
src/config/: config.yaml
src/core/: __init__.py  base_agent.py
src/data_models/: models.py
src/domain/: entities.py  exceptions.py  repositories.py
src/infrastructure/: __init__.py  config.py  container.py  error_handling.py  logging.py  repositories.py  tool_factory.py  workflow_executor.py
src/ingestion/: ingestion_pipeline.py  vector_db_manager.py
src/presentation/: dtos.py  routers.py
src/prompts/: prompt_template.py
tests/: conftest.py
(+6 files in other folders)
