[project]
name = "agentic-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.136.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.10",
    "polygon>=1.2.8",
    "pypdf>=6.10.2",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.46.0",
]
